<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.IssueActivity">
        <include layout="@layout/toolbar_top"/>
        <ToggleButton
                android:background="#C4C4C4"
                android:id="@+id/toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textOn="@string/issuesToggleOn"
                android:textOff="@string/issuesToggleOff"/>
        <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/issuesPlaceholder"
                android:text="@string/onLoadPlaceholder"/>
</LinearLayout>