<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddEntryActivity">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal|center"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout" android:orientation="vertical">
        <include layout="@layout/toolbar_top"/>

        <android.support.v7.widget.Toolbar
                android:layout_width="411dp"
                android:layout_height="54dp"
                android:background="#C4C4C4"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0">

            <TextView
                    android:text="@string/workingCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="68dp"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="125dp" android:id="@+id/textView2" android:textSize="24sp"
                    tools:text="Трудозатраты" android:textColor="@color/abc_input_method_navigation_guard"
            />
        </android.support.v7.widget.Toolbar>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"

                      android:orientation="horizontal">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:layout_marginTop="34dp" android:layout_marginLeft="40dp"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/taskCaption"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:textColorLink="@color/abc_search_url_text_pressed"
                        android:textColor="@color/abc_search_url_text_selected"
                        tools:layout_editor_absoluteY="138dp" tools:layout_editor_absoluteX="52dp"/>
                <TextView
                        android:text="@string/dateCaption"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textColorLink="@color/abc_search_url_text_pressed"
                        android:textColor="@color/abc_search_url_text_selected"
                        tools:layout_editor_absoluteY="180dp" tools:layout_editor_absoluteX="52dp"/>
                <TextView
                        android:text="@string/timeCaption"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textColorLink="@color/abc_search_url_text_pressed"
                        android:textColor="@color/abc_search_url_text_selected"
                        tools:layout_editor_absoluteY="220dp" tools:layout_editor_absoluteX="52dp"/>
                <TextView
                        android:text="@string/activityCaprion"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:textColorLink="@color/abc_search_url_text_pressed"
                        android:textColor="@color/abc_search_url_text_selected"
                        tools:layout_editor_absoluteY="262dp" tools:layout_editor_absoluteX="52dp"/>
                <TextView
                        android:text="@string/commentCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textColorLink="@color/abc_search_url_text_pressed"
                        android:textColor="@color/abc_search_url_text_selected"
                        tools:layout_editor_absoluteY="312dp" tools:layout_editor_absoluteX="52dp"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:layout_marginTop="30dp"
                          android:layout_marginLeft="36dp"
                          android:orientation="vertical">
                <EditText android:id="@+id/addEntryIssue"
                          android:inputType="text"
                          android:layout_marginBottom="6dp"
                          android:layout_width="177dp" android:layout_height="26dp"
                          style="@style/InputField"
                          android:hint="@string/_322" android:textSize="14sp"
                          tools:layout_editor_absoluteY="138dp" tools:layout_editor_absoluteX="193dp"/>
                <EditText
                        android:id="@+id/inputDate"
                        android:layout_width="177dp" android:layout_height="25dp"
                        android:layout_marginBottom="6dp"
                        android:inputType="date"
                        style="@style/InputField"
                        android:hint="@string/hintDate" android:textSize="14sp"
                        tools:layout_editor_absoluteY="180dp" tools:layout_editor_absoluteX="192dp"/>
                <EditText
                        android:id="@+id/addEntryHours"
                        android:layout_width="177dp" android:layout_height="26dp"
                        android:layout_marginBottom="14dp"
                        android:inputType="number"
                        style="@style/InputField"
                        android:textSize="14sp" android:hint="@string/hintWorkTime"
                        tools:layout_editor_absoluteY="220dp" tools:layout_editor_absoluteX="192dp"/>

                <Spinner
                        android:layout_width="178dp"
                        android:layout_height="25dp"
                        android:id="@+id/spinner"
                        tools:layout_editor_absoluteY="262dp" tools:layout_editor_absoluteX="192dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <EditText
                    android:layout_width="313dp" android:layout_height="84dp"
                    android:inputType="text"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="40dp"
                    style="@style/InputField"
                    android:textSize="14sp" android:hint="@string/hintComment" android:id="@+id/addEntryComments"
                    android:gravity="top"
                    tools:layout_editor_absoluteY="343dp" tools:layout_editor_absoluteX="52dp"/>
        </LinearLayout>

        <!-- android:layout_marginRight="10dp"!-->

        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="10dp"
                      android:layout_height="match_parent">
            <Button
                    android:text="@string/buttonBackCaption"
                    android:background="@drawable/gray_button"
                    android:layout_marginLeft="42dp"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonBack"
                    tools:layout_editor_absoluteY="439dp" tools:layout_editor_absoluteX="52dp"/>
            <Button
                    android:text="@string/buttonAddCaption"
                    android:background="@drawable/button"
                    android:layout_marginLeft="11dp"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAdd"
                    tools:layout_editor_absoluteY="439dp" tools:layout_editor_absoluteX="219dp"/>
        </LinearLayout>
    </LinearLayout>






</android.support.constraint.ConstraintLayout>